--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
 version: '3'
 services:
-  db:
-    image: mongo:latest
+  mongo_db:
+    image: mongo
     environment:
-      - MONGO_INITDB_ROOT_USERNAME: root
-      - MONGO_INITDB_ROOT_PASSWORD: root
+       - MONGO_INITDB_ROOT_USERNAME:"root"
+       - MONGO_INITDB_ROOT_PASSWORD:"rootpassword"
+    ports:
+       - 27017:27017
   mongo-express:
     image: mongo-express
-    restart: always
     ports:
-      - 8081:8081
+       - 8081:8081
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: example
-      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
-
+       - ME_CONFIG_MONGODB_ADMINUSERNAME:"admin"
+       - ME_CONFIG_MONGODB_ADMINPASSWORD:"adminpassword"
+       - MONGO_INITDB_DATABASE:ethans-db  
